tests/tools/trip/randomTrips/errors/period_insertion_density_conflict/options.tools
-n net.net.xml -s 42 --period 10 --insertion-density 10
